--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -22,20 +22,34 @@
       </li>
     </ul>
   </div>
-  <img
-    srcset="
-      ./images/delivery/del-dt@1x.jpg 1x,
-      ./images/delivery/del-dt@2x.jpg 2x
-    "
-    src="./images/delivery/del-dt@1x.jpg"
-    alt=""
-    class="delivery-foto"
-  />
-  <source
-    srcset="
-      ./images/delivery/del-dt@1x.jpg 1x,
-      ./images/delivery/del-dt@2x.jpg 2x
-    "
-    media="(max-width:767.98)"
-  />
+  <picture>
+    <source
+      srcset="
+        ./images/delivery/del-tb@1x.jpg  1x,
+        ./images/delivery/del-tb@2x.jpg  2x,
+        ./images/delivery/del-tb-1x.webp 1x,
+        ./images/delivery/del-tb-2x.webp 2x
+      "
+      media="(max-width:1279.98px)"
+    />
+    <source
+      srcset="
+        ./images/delivery/del-mb@1x.jpg  1x,
+        ./images/delivery/del-mb@2x.jpg  2x,
+        ./images/delivery/del-mb-1x.webp 1x,
+        ./images/delivery/del-mb-2x.webp 2x
+      "
+      media="(max-width: 767.98px)"
+    />
+    <source
+      srcset="
+        ./images/delivery/del-dt@1x.jpg  1x,
+        ./images/delivery/del-dt@2x.jpg  2x,
+        ./images/delivery/del-dt-1x.webp 1x,
+        ./images/delivery/del-dt-2x.webp 2x
+      "
+      media="(min-width:1280px)"
+    />
+    <img src="./images/delivery/del-dt@1x.jpg" class="delivery-foto" alt="" />
+  </picture>
 </section>
