--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -1,51 +1,122 @@
 <section class="blog section about" id="blog">
-  <div class="container">
+  <div class="blog__wrapper container">
     <h2 class="subtitle">BLOG</h2>
     <div class="blog-wrapper-foto">
+      <div class="blog__wrapper-icon-switch">
+        <button class="blog__icon-switch1">
+          <svg class="" width="" height="">
+            <use href="./images/symbol-defs.svg#icon-arrow-left"></use>
+          </svg>
+        </button>
+        <button class="blog__icon-switch2">
+          <svg class="" width="" height="">
+            <use href="./images/symbol-defs.svg#icon-arrow-right"></use>
+          </svg>
+        </button>
+      </div>
       <picture>
-        <source srcset="
-        ./images/blog/dt/blog2-dt@1x.jpg 1x,
-        ./images/blog/dt/blog2-dt@2x.jpg 2x,
-        ./images/blog/dt/blog2-dt-1x.webp 1x,
-        ./images/blog/dt/blog2-dt-2x.webp 2x
-        " 
-        type="image/webp"/>
-        <img src="./images/blog/dt/blog2-dt@1x.jpg" alt="" />
+        <source
+          srcset="
+            ./images/blog/dt/blog2-dt@1x.jpg  1x,
+            ./images/blog/dt/blog2-dt@2x.jpg  2x,
+            ./images/blog/dt/blog2-dt-1x.webp 1x,
+            ./images/blog/dt/blog2-dt-2x.webp 2x
+          "
+          type="image/webp"
+          media="(max-width:767.98px)"
+        />
+
+        <source
+          srcset="
+            ./images/blog/tb/blog2-tb@1x.jpg  1x,
+            ./images/blog/tb/blog2-tb@2x.jpg  2x,
+            ./images/blog/tb/blog2-tb-1x.webp 1x,
+            ./images/blog/tb/blog2-tb-2x.webp 2x
+          "
+          type="image/webp"
+          media="(max-width:1280px)"
+        />
+        <source
+          srcset="
+            ./images/blog/tb/blog2-tb@1x.jpg  1x,
+            ./images/blog/tb/blog2-tb@2x.jpg  2x,
+            ./images/blog/tb/blog2-tb-1x.webp 1x,
+            ./images/blog/tb/blog2-tb-2x.webp 2x
+          "
+          type="image/webp"
+          media="(min-width:1280px)"
+        />
+        <img src="./images/blog/tb/blog2-tb@1x.jpg" alt="" class="blog-foto" />
       </picture>
-      <!-- <img
-        class="blog-foto"
-        srcset="
-          ./images/blog/dt/blog2-dt@1x.jpg  1x,
-          ./images/blog/dt/blog2-dt@2x.jpg  2x,
-          ./images/blog/dt/blog2-dt-1x.webp 1x,
-          ./images/blog/dt/blog2-dt-2x.webp 2x
-        "
-        src="./images/blog/dt/blog2-dt@1x.jpg"
-        alt=""
-      />
-      <img
-        class="blog-foto"
-        srcset="
-          ./images/blog/dt/blog1-dt@1x.jpg  1x,
-          ./images/blog/dt/blog1-dt@2x.jpg  2x,
-          ./images/blog/dt/blog1-dt-1x.webp 1x,
-          ./images/blog/dt/blog1-dt-2x.webp 2x
-        "
-        src="./images/blog/dt/blog1-dt@1x.jpg"
-        alt=""
-      />
-      <img
-        class="blog-foto"
-        srcset="
-          ./images/blog/dt/blog3-dt@1x.jpg  1x,
-          ./images/blog/dt/blog3-dt@2x.jpg  2x,
-          ./images/blog/dt/blog3-dt-1x.webp 1x,
-          ./images/blog/dt/blog3-dt-2x.webp 2x
-        "
-        src="./images/blog/dt/blog3-dt@1x.jpg"
-        alt=""
-      />
-    </div> -->
+      <picture>
+        <source
+          srcset="
+            ./images/blog/dt/blog1-dt@1x.jpg  1x,
+            ./images/blog/dt/blog1-dt@2x.jpg  2x,
+            ./images/blog/dt/blog1-dt-1x.webp 1x,
+            ./images/blog/dt/blog1-dt-2x.webp 2x
+          "
+          type="image/webp"
+          media="(max-width:767.98px)"
+        />
+
+        <source
+          srcset="
+            ./images/blog/tb/blog1-tb@1x.jpg  1x,
+            ./images/blog/tb/blog1-tb@2x.jpg  2x,
+            ./images/blog/tb/blog1-tb-1x.webp 1x,
+            ./images/blog/tb/blog1-tb-2x.webp 2x
+          "
+          type="image/webp"
+          media="(max-width:1280px)"
+        />
+        <source
+          srcset="
+            ./images/blog/tb/blog1-tb@1x.jpg  1x,
+            ./images/blog/tb/blog1-tb@2x.jpg  2x,
+            ./images/blog/tb/blog1-tb-1x.webp 1x,
+            ./images/blog/tb/blog1-tb-2x.webp 2x
+          "
+          type="image/webp"
+          media="(min-width:1280px)"
+        />
+        <img src="./images/blog/tb/blog2-tb@1x.jpg" alt="" class="blog-foto" />
+      </picture>
+      <picture>
+        <source
+          srcset="
+            ./images/blog/dt/blog3-dt@1x.jpg  1x,
+            ./images/blog/dt/blog3-dt@2x.jpg  2x,
+            ./images/blog/dt/blog3-dt-1x.webp 1x,
+            ./images/blog/dt/blog3-dt-2x.webp 2x
+          "
+          type="image/webp"
+          media="(max-width:767.98px)"
+        />
+
+        <source
+          srcset="
+            ./images/blog/tb/blog3-tb@1x.jpg  1x,
+            ./images/blog/tb/blog3-tb@2x.jpg  2x,
+            ./images/blog/tb/blog3-tb-1x.webp 1x,
+            ./images/blog/tb/blog3-tb-2x.webp 2x
+          "
+          type="image/webp"
+          media="(max-width:1280px)"
+        />
+        <source
+          srcset="
+            ./images/blog/tb/blog3-tb@1x.jpg  1x,
+            ./images/blog/tb/blog3-tb@2x.jpg  2x,
+            ./images/blog/tb/blog3-tb-1x.webp 1x,
+            ./images/blog/tb/blog3-tb-2x.webp 2x
+          "
+          type="image/webp"
+          media="(min-width:1280px)"
+        />
+        <img src="./images/blog/tb/blog2-tb@1x.jpg" alt="" class="blog-foto" />
+      </picture>
+    </div>
     <p class="blog-text-follow">Follow to our newsletter</p>
     <button class="btn blog-btn">Subscribe</button>
   </div>
