fix sticky header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,6 +10,7 @@
         <span class="hamburger-inner"></span>
       </span>
     </button>
+
     <a href="./index.html" class="logo">
       <svg class="logo__icon">
         <use href="./images/symbol-defs.svg#icon-Logo"></use>
@@ -34,10 +35,11 @@
         </li>
       </ul>
     </nav>
-    <a href="tel:+380961111111" class="header__link">
+    <button type="button" class="header__tel-btn">
       <svg class="header__icon">
         <use href="./images/symbol-defs.svg#icon-tel"></use>
       </svg>
-    </a>
+    </button>
+
   </div>
 </header>
