Add Modal contact us

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -60,6 +60,6 @@
         />
       </picture>
     </div>
-    <button class="hero__btn" type="button"></button>
+    <button data-modal-open class="hero__btn" type="button"></button>
   </div>
 </section>
