add header correct position

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
       </span>
     </button>
 
-    <a href="./index.html" class="logo">
+    <a href="./index.html" class="logo" id="up-logo">
       <svg class="logo__icon">
         <use href="./images/symbol-defs.svg#icon-Logo"></use>
       </svg>
