--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -24,8 +24,8 @@
 
 .mobile-menu__btn {
     position: absolute;
-    top: 20px;
-    right: 24px;
+    top: 4px;
+    right: 0;
     padding: 0;
 	// background-color: transparent;
 	// cursor: pointer;
