--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -1,5 +1,5 @@
-<div class="modal-subscribe">
-  <div class="modal-subscribe-wrapper">
+<div class="subscribe">
+  <div class="subscribe__wrapper">
     <picture>
       <source
         srcset="
@@ -34,14 +34,14 @@
       <img src="./images/modal(subscribe)/sub-tb@1x.jpg" alt="" />
     </picture>
 
-    <div class="modal-subscribe-information-wrapper">
-      <button class="modal-subscribe-icon-button-close">
-        <svg class="modal-subscribe-icon-close" width="" height="">
+    <div class="subscribe__information-wrapper">
+      <button class="subscribe__icon-button-close">
+        <svg class="subscribe__icon-close" width="" height="">
           <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg>
       </button>
-      <h3 class="backdrop-modal-blog-title">Follow to our newsletter</h3>
-      <p class="backdrop-modal-blog-text">
+      <h3 class="subscribe__blog-title">Follow to our newsletter</h3>
+      <p class="subscribe__blog-text">
         Be the first to get exclusive offers and the latest news on our product
         directly in your box.
       </p>
@@ -54,7 +54,7 @@
           class="form-blog-input"
         />
       </form>
-      <button class="btn btn-modal-subscribe">Subscribe</button>
+      <button class="btn subscribe__btn">Subscribe</button>
     </div>
   </div>
 </div>
