--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -1,23 +1,23 @@
 <section class="section about delivery" id="delivery">
   <div class="container">
     <h2 class="subtitle">DELIVERY</h2>
-    <ul class="delivery-list">
-      <li class="delivery-item">
-        <span class="delivery-number">1</span>Choose your bouquet and make an
+    <ul class="delivery__list">
+      <li class="delivery__item">
+        <span class="delivery__number">1</span>Choose your bouquet and make an
         order on website
       </li>
-      <li class="delivery-item">
-        <span class="delivery-number">2</span>
+      <li class="delivery__item">
+        <span class="delivery__number">2</span>
         Wait for the call to clarify the details of the order. You can pay
         online or to the courier
       </li>
-      <li class="delivery-item">
-        <span class="delivery-number">3</span>
+      <li class="delivery__item">
+        <span class="delivery__number">3</span>
         Wait for the delivery at the selected time or pick up the order from the
         store
       </li>
-      <li class="delivery-item">
-        <span class="delivery-number">4</span>Make someone happy or enjoy
+      <li class="delivery__item">
+        <span class="delivery__number">4</span>Make someone happy or enjoy
         yourself
       </li>
     </ul>
