--- a/src/sass/components/_delivery.scss
+++ b/src/sass/components/_delivery.scss
@@ -25,7 +25,7 @@ li {
   margin-left: 16px;
 }
 
-.delivery-number {
+.delivery__number {
   border: 1px solid black;
   border-radius: 50%;
   font-family: 'Montserrat';
@@ -50,7 +50,7 @@ li {
   }
 }
 
-.delivery-item {
+.delivery__item {
   display: flex;
   align-items: center;
   font-family: 'Montserrat';
@@ -70,7 +70,7 @@ li {
   }
 }
 
-.delivery-list {
+.delivery__list {
   display: flex;
   flex-direction: column;
   @include mq(phone) {
