--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,11 +35,10 @@
         </li>
       </ul>
     </nav>
-    <button type="button" class="header__tel-btn">
+    <button data-modal-open type="button" class="header__tel-btn">
       <svg class="header__icon">
         <use href="./images/symbol-defs.svg#icon-tel"></use>
       </svg>
     </button>
-
   </div>
 </header>
