--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,7 +1,7 @@
 <div class="mobile-menu js-menu-container" id="mobile-menu">
   <ul class="mobile-menu__list list">
     <li class="mobile-menu__item">
-      <a href="#up-logo" class="mobile-menu__link mobile-menu__link--current"
+      <a href="#" class="mobile-menu__link mobile-menu__link--current"
         >Anemone</a
       >
     </li>
