--- a/src/sass/components/_blog.scss
+++ b/src/sass/components/_blog.scss
@@ -1,7 +1,20 @@
-.blog-btn {
+.swiper {
+  width: 153px;
+  height: 181px;
+  @include mq(tablet) {
+    width: 344px;
+    height: 398px;
+  }
+  @include mq(desktop) {
+    width: 390px;
+    height: 421px;
+  }
+
+
 }
 
-.blog-wrapper-foto {
+.blog__wrapper-foto {
+  position: relative;
   @include mq(phone) {
     gap: 8px;
   }
@@ -52,6 +65,8 @@
 }
 
 .blog__icon-switch1 {
+  position: absolute;
+  left: 0;
   background-color: transparent;
   border: none;
   @include mq(phone) {
@@ -92,6 +107,12 @@
     margin-left: 1008px;
     stroke: var(--main-text-cl);
   }
+}
+
+.blog__arrow {
+  width: 41px;
+  height: 27px;
+  stroke: var(--white-cl);
 }
 
 .blog__wrapper {
