add button to store

--- a/src/partials/store.html
+++ b/src/partials/store.html
@@ -239,6 +239,6 @@
         </div>
       </li>
     </ul>
-    <button type="button" class="btn">Order flowers</button>
+    <button type="button" data-modal-open class="btn">Order flowers</button>
   </div>
 </section>
