--- a/src/sass/components/_modal-contact-us.scss
+++ b/src/sass/components/_modal-contact-us.scss
@@ -165,7 +165,7 @@
   width: 100%;
   height: 37px;
 
-  background-color: rgba(232, 111, 84, 0.4);
+  background-color: #e86f54;
   border-radius: 8px;
   border: none;
 
@@ -180,8 +180,8 @@
   }
 
   // !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-  .form__input:not(:placeholder-shown):valid & {
-    background: #e86f54;
+  .form__input:not(:placeholder-shown):valid + & {
+    background: rgba(232, 111, 84, 0.4);
   }
 }
 
