--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -33,5 +33,6 @@
 @import './components/mobile-menu';
 @import './components/hamburger';
 @import './components/up-button';
+@import './components/spinner';
 
 // @import './example';
