--- a/src/partials/modal-contact-us.html
+++ b/src/partials/modal-contact-us.html
@@ -37,7 +37,7 @@
             placeholder="Your email"
           />
         </label>
-        <button class="modal__btn" type="submit" data-action="send">
+        <button class="modal__btn" type="submit" data-action="send" disabled>
           Send
         </button>
       </form>
@@ -48,7 +48,7 @@
         <use href="./images/symbol-defs.svg#icon-thanck-you"></use>
       </svg>
       <b class="modal-head">Thank you!</b>
-      <p class="modal-text">
+      <p class="modal-text modal-text--center">
         We have received your contact details and will reach you soon.
       </p>
       <button class="modal__btn" type="submit" data-modal-close>
