--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -247,12 +247,12 @@
       </div>
 
       <div class="swiper-button-prev">
-        <svg class="blog__arrow" width="" height="">
+        <svg class="blog__arrow">
           <use href="./images/symbol-defs.svg#icon-arrow-left"></use>
         </svg>
       </div>
       <div class="swiper-button-next">
-        <svg class="blog__arrow" width="" height="">
+        <svg class="blog__arrow">
           <use href="./images/symbol-defs.svg#icon-arrow-right"></use>
         </svg>
       </div>
