--- a/src/sass/components/_blog.scss
+++ b/src/sass/components/_blog.scss
@@ -1,16 +1,7 @@
-.swiper {
-  width: 153px;
-  height: 181px;
-  @include mq(tablet) {
-    width: 344px;
-    height: 398px;
-  }
-  @include mq(desktop) {
-    width: 390px;
-    height: 421px;
-  }
-
-
+.blog__wrapper {
+  position: relative;
+  overflow: hidden;
+  margin: 0 auto;
 }
 
 .blog__wrapper-foto {
@@ -47,8 +38,8 @@
 }
 
 .blog-foto {
-  display: flex;
-  gap: 30px;
+  // display: flex;
+  // gap: 30px;
   @include mq(phone) {
     width: 153px;
     height: 181px;
@@ -64,59 +55,65 @@
   }
 }
 
-.blog__icon-switch1 {
-  position: absolute;
-  left: 0;
-  background-color: transparent;
-  border: none;
-  @include mq(phone) {
-    width: 41px;
-    height: 27px;
-    stroke: var(--white-cl);
-  }
-  @include mq(tablet) {
-    width: 98px;
-    height: 64px;
-    stroke: var(--white-cl);
-  }
-  @include mq(desktop) {
-    width: 96px;
-    height: 64px;
-    stroke: var(--main-text-cl);
-  }
-}
+// .blog__icon-switch1 {
+//   position: absolute;
+//   left: 0;
+//   background-color: transparent;
+//   border: none;
+//   @include mq(phone) {
+//     width: 41px;
+//     height: 27px;
+//     stroke: var(--white-cl);
+//   }
+//   @include mq(tablet) {
+//     width: 98px;
+//     height: 64px;
+//     stroke: var(--white-cl);
+//   }
+//   @include mq(desktop) {
+//     width: 96px;
+//     height: 64px;
+//     stroke: var(--main-text-cl);
+//   }
+// }
 
-.blog__icon-switch2 {
-  background-color: transparent;
-  border: none;
-  @include mq(phone) {
-    width: 41px;
-    height: 27px;
-    margin-left: 236px;
-    stroke: var(--white-cl);
-  }
-  @include mq(tablet) {
-    width: 98px;
-    height: 64px;
-    margin-left: 574px;
-    stroke: var(--white-cl);
-  }
-  @include mq(desktop) {
-    width: 96px;
-    height: 64px;
-    margin-left: 1008px;
-    stroke: var(--main-text-cl);
-  }
-}
+// .blog__icon-switch2 {
+//   background-color: transparent;
+//   border: none;
+//   @include mq(phone) {
+//     width: 41px;
+//     height: 27px;
+//     margin-left: 236px;
+//     stroke: var(--white-cl);
+//   }
+//   @include mq(tablet) {
+//     width: 98px;
+//     height: 64px;
+//     margin-left: 574px;
+//     stroke: var(--white-cl);
+//   }
+//   @include mq(desktop) {
+//     width: 96px;
+//     height: 64px;
+//     margin-left: 1008px;
+//     stroke: var(--main-text-cl);
+//   }
+// }
 
 .blog__arrow {
   width: 41px;
   height: 27px;
   stroke: var(--white-cl);
-}
 
-.blog__wrapper {
-  position: relative;
+  @include mq(tablet) {
+    width: 98px;
+    height: 64px;
+  }
+  @include mq(desktop) {
+    width: 96px;
+    height: 64px;
+    stroke: var(--main-text-cl);
+  }
 }
 
 .blog__wrapper-icon-switch {
