in hero-btn use svg-sprite

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -60,6 +60,21 @@
         />
       </picture>
     </div>
-    <button data-modal-open class="hero__btn" type="button"></button>
+    <button data-modal-open class="hero__btn" type="button">
+      <svg class="hero__btn-svg" width="64" height="76">
+        <use
+          class="hero__btn-svg--md"
+          href="./images/symbol-defs.svg#hero-btn-mb"
+        ></use>
+        <use
+          class="hero__btn-svg--tb"
+          href="./images/symbol-defs.svg#hero-btn-tb"
+        ></use>
+        <use
+          class="hero__btn-svg--dt"
+          href="./images/symbol-defs.svg#hero-btn-dt"
+        ></use>
+      </svg>
+    </button>
   </div>
 </section>
