--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -117,24 +117,54 @@
   background-color: inherit;
   border: none;
   padding: 0;
-  width: 64px;
-  height: 76px;
+  // width: 64px;
+  // height: 76px;
 
-  background-image: url(../images/hero/hero-btn-mb.svg);
+  // background-image: url(../images/hero/hero-btn-mb.svg);
 
   @media screen and (min-width: 768px) {
     margin-left: 20px;
-    width: 145px;
-    height: 150px;
+    // width: 145px;
+    // height: 150px;
 
-    background-image: url(../images/hero/hero-btn-tb.svg);
+    // background-image: url(../images/hero/hero-btn-tb.svg);
   }
   @media screen and (min-width: 1280px) {
     margin-right: 145px;
     margin-left: 0px;
+    // width: 166px;
+    // height: 166px;
+
+    // background-image: url(../images/hero/hero-btn-dt.svg);
+  }
+}
+
+.hero__btn-svg {
+  @media screen and (min-width: 768px) {
+    width: 145px;
+    height: 150px;
+  }
+  @media screen and (min-width: 1280px) {
     width: 166px;
     height: 166px;
+  }
+}
 
-    background-image: url(../images/hero/hero-btn-dt.svg);
+.hero__btn-svg--md {
+  @media screen and (min-width: 768px) {
+    opacity: 0;
+  }
+}
+
+.hero__btn-svg--tb {
+  opacity: 0;
+  @media screen and (min-width: 768px) and (max-width: 1279.98px) {
+    opacity: 1;
+  }
+}
+
+.hero__btn-svg--dt {
+  @media screen and (max-width: 1279.98px) {
+    opacity: 0;
   }
 }
