--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,23 +1,39 @@
 .swiper {
-    width: 100%;
-    height: 181px;
-    @include mq(tablet) {
-      height: 398px;
-    }
-    @include mq(desktop) {
-      height: 421px;
-    }
+  // --swiper-navigation-size: 160px;
+
+  left: 50%;
+  transform: translateX(-50%);
+  width: 413px;
+  height: 181px;
+
+  @include mq(tablet) {
+    --swiper-navigation-size: 160px;
+
+    width: 982px;
+    height: 398px;
   }
-
-.swiper-button-prev, 
-.swiper-button-next {
-    &::before,
-    &::after {
-        display: none;
-    }
+  @include mq(desktop) {
+    height: 421px;
+  }
 }
-.swiper-slide {
-    width: 153px;
-    height: 181px;
 
+.swiper-button-prev,
+.swiper-button-next {
+  right: calc(50% - 380px);
+  left: auto;
+
+  &::before,
+  &::after {
+    display: none;
+  }
+}
+
+.swiper-button-next {
+  right: calc(50% - 380px) !important;
+  left: auto;
+}
+
+.swiper-button-prev {
+  left: calc(50% - 380px) !important;
+  right: auto;
 }
