find scroll problem

--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -1,12 +1,12 @@
 html {
-    scroll-behavior: smooth;
-    scroll-padding-top: 80px;
+  scroll-behavior: smooth;
+  //   scroll-padding-top: 80px;
 }
 
 body {
-    font-family: var(--main-font);
+  font-family: var(--main-font);
 }
 
 .section {
-    @extend %section;
+  @extend %section;
 }
