--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,56 +1,62 @@
 <footer class="footer">
-    <div class="container__footer container">
-    <div class="footer__logo"><a href="./index.html" class="">
+  <div class="container__footer container">
+    <div class="footer__logo">
+      <a href="./index.html" class="">
         <svg class="footer__logo--icon">
           <use href="./images/symbol-defs.svg#icon-Logo"></use>
         </svg>
       </a>
     </div>
-  <div class="footer__nav wth">
-    <nav>
+    <div class="footer__nav wth">
+      <nav>
         <p class="footer__title">Navigation</p>
-      <ul class="footer__nav--list">
-        <li class="footer__item">
-          <a href="./index.html" class="footer__link link">Anemone</a>
-        </li>
-        <li class="footer__item">
-          <a href="#about-us" class="footer__link link">About us</a>
-        </li>
-        <li class="footer__item">
+        <ul class="footer__nav--list">
+          <li class="footer__item">
+            <a href="./index.html" class="footer__link link">Anemone</a>
+          </li>
+          <li class="footer__item">
+            <a href="#about-us" class="footer__link link">About us</a>
+          </li>
+          <li class="footer__item">
             <a href="#store" class="footer__link link">Store</a>
-        </li>
-        <li class="footer__item">
-          <a href="#delivery" class="footer__link link">Delivery</a>
-        </li>
-      </ul>
-    </nav>
+          </li>
+          <li class="footer__item">
+            <a href="#delivery" class="footer__link link">Delivery</a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <div class="footer__worktime wth">
-        <p class="footer__title">Opening times</p>
-        <p class="footer__worktime-item">Every day<br>
-                9:00 - 22:00</p>
+      <p class="footer__title">Opening times</p>
+      <p class="footer__worktime-item">
+        Every day<br />
+        9:00 - 22:00
+      </p>
     </div>
     <div class="footer__address wth">
       <address>
         <p class="footer__title">Contacts</p>
         <ul class="">
-            <li class="footer__item link">
-                <a href="tel:+380961111111" class="footer__link"
-                  >+38 063 123 45 67</a
-                >
-              </li>
-              <li class="footer__item link">
-                <a href="mailto:anemonestudio@example.com" class="footer__link"
-                  >anemonestudio<span class="footer__item--transfer">@example.com</span></a
-                >
-              </li>
+          <li class="footer__item link">
+            <a href="tel:+380961111111" class="footer__link"
+              >+38 063 123 45 67</a
+            >
+          </li>
+          <li class="footer__item link">
+            <a href="mailto:anemonestudio@example.com" class="footer__link"
+              >anemonestudio<span class="footer__item--transfer"
+                >@example.com</span
+              ></a
+            >
+          </li>
           <li class="footer__item link">
             <a
               href=""
               target="_blank"
               rel="noopener noreferrer"
               class="contact-footer__map"
-              >Reitarska Street, 11 Kyiv, Ukraine</a>
+              >Reitarska Street, 11 Kyiv, Ukraine</a
+            >
           </li>
         </ul>
       </address>
@@ -74,5 +80,4 @@
       </ul>
     </div>
   </div>
-</div>
 </footer>
