--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="section hero">
   <div class="container hero__container">
-    <h1 class="hero__title">ANEMONE</h1>
-    <h2 class="hero__mintitle">flower studio</h2>
+    <h1 class="hero__title hero__title-anim">ANEMONE</h1>
+    <h2 class="hero__mintitle hero__mintitle-anim">flower studio</h2>
     <div class="hero__img">
       <picture>
         <source
@@ -60,7 +60,7 @@
         />
       </picture>
     </div>
-    <button data-modal-open class="hero__btn" type="button">
+    <button data-modal-open class="hero__btn hero__btn-anim" type="button">
       <svg class="hero__btn-svg" width="64" height="76">
         <use
           class="hero__btn-svg--md"
