--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -168,3 +168,144 @@
     opacity: 0;
   }
 }
+
+/* Animation*/
+// .hero__title-anim {
+//   animation: to-up 1000ms ease-out 300ms both;
+// }
+// .hero__mintitle-anim {
+//   animation: to-left 1000ms ease-out 900ms both;
+// }
+// .hero__btn-anim {
+//   animation: to-right 1000ms ease-out 900ms both;
+// }
+// @keyframes to-up {
+//   0%{
+//     transform: translate(-50%, -150%);
+//    opacity: 0;
+//    }
+
+//   25% {
+//     opacity: 0.25;
+//    }
+//   50%{
+//     opacity: 0.5;
+//   }
+//   75% {
+//     opacity: 0.75;
+//   }
+//   100%{
+//    transform: translate(-50%, 50%);
+//    opacity: 1;
+//    left: 50%;
+   
+//   }
+// }
+
+// @keyframes to-left {
+//   0%{
+//     transform: translate(-100px);
+//    opacity: 0;
+//    }
+
+//   25% {
+//     opacity: 0.25;
+//    }
+//   50%{
+//     opacity: 0.5;
+//   }
+//   75% {
+//     opacity: 0.75;
+//   }
+//   100%{
+//    transform: translate(0);
+//    opacity: 1;
+   
+//   }
+// }
+
+// @keyframes to-right {
+//   0%{
+//     transform: translate(100px);
+//    opacity: 0;
+//    }
+
+//   25% {
+//     opacity: 0.25;
+//    }
+//   50%{
+//     opacity: 0.5;
+//   }
+//   75% {
+//     opacity: 0.75;
+//   }
+//   100%{
+//    transform: translate(0);
+//    opacity: 1;
+   
+//   }
+// }
+
+.hero__mintitle-anim {
+  -webkit-animation: text-focus-in 750ms cubic-bezier(0.550, 0.085, 0.680, 0.530) 700ms both;
+   animation: text-focus-in 750ms cubic-bezier(0.550, 0.085, 0.680, 0.530) 700ms both;
+}
+.hero__btn-anim {
+  -webkit-animation: text-focus-in 750ms cubic-bezier(0.550, 0.085, 0.680, 0.530) 700ms both;
+   animation: text-focus-in 750ms cubic-bezier(0.550, 0.085, 0.680, 0.530) 700ms both;
+}
+
+.hero__title-anim  {
+  -webkit-animation: focus-in-contract 1500ms cubic-bezier(0.250, 0.460, 0.450, 0.940) 100ms both;
+	        animation: focus-in-contract 1500ms cubic-bezier(0.250, 0.460, 0.450, 0.940) 100ms both;
+}
+@-webkit-keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes focus-in-contract {
+  0% {
+    letter-spacing: 1em;
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes focus-in-contract {
+  0% {
+    letter-spacing: 1em;
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
