--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -3,9 +3,10 @@
   min-height: 60px;
   padding-top: 16px;
   background-color: var(--white-cl);
-  position: sticky;
-    // position: fixed;
+  // position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
   z-index: 1000;
 
   &:has(.mobile-menu__btn.is-active) {
