--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -176,7 +176,7 @@
               type="image/webp"
               media="(max-width:767.98px)"
             />
-  
+
             <source
               srcset="
                 ./images/blog/tb/blog2-tb@1x.jpg  1x,
@@ -216,7 +216,7 @@
               type="image/webp"
               media="(max-width:767.98px)"
             />
-  
+
             <source
               srcset="
                 ./images/blog/tb/blog1-tb@1x.jpg  1x,
@@ -244,6 +244,126 @@
             />
           </picture>
         </div>
+        <div class="swiper-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/blog/dt/flowers1-dt@1x.jpg  1x,
+                ./images/blog/dt/flowers1-dt@2x.jpg  2x,
+                ./images/blog/dt/flowers1-dt-1x.webp 1x,
+                ./images/blog/dt/flowers1-dt-2x.webp 2x
+              "
+              type="image/webp"
+              media="(max-width:767.98px)"
+            />
+
+            <source
+              srcset="
+                ./images/blog/tb/flowers1-tb@1x.jpg  1x,
+                ./images/blog/tb/flowers1-tb@2x.jpg  2x,
+                ./images/blog/tb/flowers1-tb-1x.webp 1x,
+                ./images/blog/tb/flowers1-tb-2x.webp 2x
+              "
+              type="image/webp"
+              media="(max-width:1280px)"
+            />
+            <source
+              srcset="
+                ./images/blog/tb/flowers1-tb@1x.jpg  1x,
+                ./images/blog/tb/flowers1-tb@2x.jpg  2x,
+                ./images/blog/tb/flowers1-tb-1x.webp 1x,
+                ./images/blog/tb/flowers1-tb-2x.webp 2x
+              "
+              type="image/webp"
+              media="(min-width:1280px)"
+            />
+            <img
+              src="./images/blog/tb/flowers1-tb@1x.jpg"
+              alt=""
+              class="blog-foto"
+            />
+          </picture>
+        </div>
+        <div class="swiper-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/blog/dt/flowers2-dt@1x.jpg  1x,
+                ./images/blog/dt/flowers2-dt@2x.jpg  2x,
+                ./images/blog/dt/flowers2-dt-1x.webp 1x,
+                ./images/blog/dt/flowers2-dt-2x.webp 2x
+              "
+              type="image/webp"
+              media="(max-width:767.98px)"
+            />
+
+            <source
+              srcset="
+                ./images/blog/tb/flowers2-tb@1x.jpg  1x,
+                ./images/blog/tb/flowers2-tb@2x.jpg  2x,
+                ./images/blog/tb/flowers2-tb-1x.webp 1x,
+                ./images/blog/tb/flowers2-tb-2x.webp 2x
+              "
+              type="image/webp"
+              media="(max-width:1280px)"
+            />
+            <source
+              srcset="
+                ./images/blog/tb/flowers2-tb@1x.jpg  1x,
+                ./images/blog/tb/flowers2-tb@2x.jpg  2x,
+                ./images/blog/tb/flowers2-tb-1x.webp 1x,
+                ./images/blog/tb/flowers2-tb-2x.webp 2x
+              "
+              type="image/webp"
+              media="(min-width:1280px)"
+            />
+            <img
+              src="./images/blog/tb/flowers2-tb@1x.jpg"
+              alt=""
+              class="blog-foto"
+            />
+          </picture>
+        </div>
+        <div class="swiper-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/blog/dt/flowers3-dt@1x.jpg  1x,
+                ./images/blog/dt/flowers3-dt@2x.jpg  2x,
+                ./images/blog/dt/flowers3-dt-1x.webp 1x,
+                ./images/blog/dt/flowers3-dt-2x.webp 2x
+              "
+              type="image/webp"
+              media="(max-width:767.98px)"
+            />
+
+            <source
+              srcset="
+                ./images/blog/tb/flowers3-tb@1x.jpg  1x,
+                ./images/blog/tb/flowers3-tb@2x.jpg  2x,
+                ./images/blog/tb/flowers3-tb-1x.webp 1x,
+                ./images/blog/tb/flowers3-tb-2x.webp 2x
+              "
+              type="image/webp"
+              media="(max-width:1280px)"
+            />
+            <source
+              srcset="
+                ./images/blog/tb/flowers3-tb@1x.jpg  1x,
+                ./images/blog/tb/flowers3-tb@2x.jpg  2x,
+                ./images/blog/tb/flowers3-tb-1x.webp 1x,
+                ./images/blog/tb/flowers3-tb-2x.webp 2x
+              "
+              type="image/webp"
+              media="(min-width:1280px)"
+            />
+            <img
+              src="./images/blog/tb/flowers3-tb@1x.jpg"
+              alt=""
+              class="blog-foto"
+            />
+          </picture>
+        </div>
       </div>
 
       <div class="swiper-button-prev">
@@ -256,11 +376,10 @@
           <use href="./images/symbol-defs.svg#icon-arrow-right"></use>
         </svg>
       </div>
-      
     </div>
 
     <p class="blog-text-follow">Follow to our newsletter</p>
-    <button class="btn blog-btn">Subscribe</button>
+    <button data-modal-open1 class="btn blog-btn">Subscribe</button>
   </div>
 </section>
 
