--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -1,4 +1,4 @@
-<div class="subscribe">
+<div data-modal1 class="subscribe is-hidden">
   <div class="subscribe__wrapper">
     <picture>
       <source
@@ -35,7 +35,7 @@
     </picture>
 
     <div class="subscribe__information-wrapper">
-      <button class="subscribe__icon-button-close">
+      <button class="subscribe__icon-button-close" data-modal-close1>
         <svg class="subscribe__icon-close" width="" height="">
           <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg>
