--- a/src/sass/components/_modal-subscribe.scss
+++ b/src/sass/components/_modal-subscribe.scss
@@ -16,6 +16,10 @@
   align-items: center;
 }
 
+.is-hidden {
+  display: none;
+}
+
 .subscribe__wrapper {
   @include mq(phone) {
     width: 272px;
