--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,7 +4,7 @@
 // utils styles
 @import './utils/variables';
 @import './utils/reset';
-// @import './utils/animations';
+@import './utils/animations';
 @import './utils/mixins';
 @import './utils/placeholder';
 
