--- a/src/sass/utils/_animations.scss
+++ b/src/sass/utils/_animations.scss
@@ -1,87 +1,64 @@
-// @keyframes heartBeat {
-//     0% {
-//       -webkit-transform: scale(1);
-//       transform: scale(1);
-//     }
+
+.hero__mintitle-anim {
+    -webkit-animation: text-focus-in 450ms cubic-bezier(0.550, 0.085, 0.680, 0.530) 100ms both;
+     animation: text-focus-in 450ms cubic-bezier(0.550, 0.085, 0.680, 0.530) 100ms both;
+  }
+  .hero__btn-anim {
+    -webkit-animation: text-focus-in 400ms cubic-bezier(0.550, 0.085, 0.680, 0.530) 200ms both;
+     animation: text-focus-in 400ms cubic-bezier(0.550, 0.085, 0.680, 0.530) 200ms both;
+  }
   
-//     5% {
-//       -webkit-transform: scale(1.3);
-//       transform: scale(1.3);
-//     }
-  
-//     10% {
-//       -webkit-transform: scale(1);
-//       transform: scale(1);
-//     }
-  
-//     14% {
-//       -webkit-transform: scale(1.3);
-//       transform: scale(1.3);
-//     }
-  
-//     18% {
-//       -webkit-transform: scale(1);
-//       transform: scale(1);
-//     }
-//     100% {
-//       -webkit-transform: scale(1);
-//       transform: scale(1);
-//     }
-//   }
-  
-//   @keyframes logo-rotate {
-//     0% {
-//       transform: rotate3d(0);
-//     }
-//     100% {
-//       transform: rotate3d(0, 1, 0.5, 360deg);
-//     }
-//   }
-  
-//   @keyframes to-bottom {
-//     0% {
-//       transform: translateY(-100px);
-//       opacity: 0;
-//     }
-  
-//     50% {
-//       opacity: 0.6;
-//     }
-  
-//     100% {
-//       transform: translateY(0);
-//       opacity: 1;
-//     }
-//   }
-  
-//   @keyframes to-top {
-//     0% {
-//       transform: translateY(100px);
-//       opacity: 0;
-//     }
-  
-//     50% {
-//       opacity: 0.6;
-//     }
-  
-//     100% {
-//       transform: translateY(0);
-//       opacity: 1;
-//     }
-//   }
-  
-//   @keyframes to-left {
-//     0% {
-//       transform: translateX(250px);
-//       opacity: 0;
-//     }
-  
-//     50% {
-//       opacity: 0.6;
-//     }
-  
-//     100% {
-//       transform: translateX(0);
-//       opacity: 1;
-//     }
-//   }
+  .hero__title-anim  {
+    -webkit-animation: focus-in-contract 700ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+              animation: focus-in-contract 700ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  }
+  @-webkit-keyframes text-focus-in {
+    0% {
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  @keyframes text-focus-in {
+    0% {
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  @-webkit-keyframes focus-in-contract {
+    0% {
+      letter-spacing: 1em;
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  @keyframes focus-in-contract {
+    0% {
+      letter-spacing: 1em;
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
